--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,8 @@ body {
   box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1); 
   border-radius: 12px 12px 0px 0px; 
 }
+#header {
+  position: relative;
+  margin-top: 40px;
+  border-radius: 12px 12px 0px 0px; 
+}
