--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,16 @@ body {
   margin-left: 20px;
   margin-bottom: 20px;
 }
+#header #toplink {
+  text-decoration: none;
+  position: absolute;
+  top:-34px;
+  right: 10px;
+  color: white;
+  font-size: 1.8em;
+}
+#footer {
+  background-color: #777;
+  height: 80px;
+  clear: both;
+}
