--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,14 @@ body {
   height: 80px;
   clear: both;
 }
+#content-wrapper {
+  background-image: url("../images/repeating.png");
+  float: left;
+}
+#main-content {
+  min-height: 300px;
+  width: 715px;
+  margin-right: 30px;
+  float: left;
+  margin-left: 15px;
+}
