--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,16 @@ body {
   float: left;
   margin-left: 15px;
 }
+h2 strong {
+  font-size: 2em;
+  font-weight: 900;
+}
+
+.image-r {
+  float: right;
+  border: 2px solid blue;
+  width: 300px;
+  padding: 5px;
+  background-color: white;
+  margin: 10px 0 10px 20px;
+}
