--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,40 @@ h2 strong {
   background-color: white;
   margin: 10px 0 10px 20px;
 }
+#side-content {
+  min-height: 150px;
+  width: 200px;
+  float: left;
+}
+
+#main-nav {
+  float: left;
+  width: 100%;
+  background-color: #333;
+}
+#main-nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  float: left;
+  position: relative;
+  left:50%;
+}
+
+#main-nav ul li {
+  float: left;
+  position: relative;
+  right: 50%;
+}
+
+#main-nav ul li a {
+  padding: 10px 25px;
+  display: block;
+  text-decoration: none;
+  color: #ccc;
+}
+
+#main-nav ul li a:hover {
+  background-color: #ccc;
+  color: #333;
+}
