--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,12 @@ h2 strong {
   background-color: #ccc;
   color: #333;
 }
+#center {
+  width: 960px;
+  text-align: center;
+}
+
+strong {
+  font-weight: 900;
+  font-size: 48px;
+}
